fix css for show images, and padding on firefox

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -137,12 +137,21 @@ strong {
 .shadow-under:after,
 .shadow-under:before,
 hr {
-  behavior: url("../build-PIE/PIE.htc"); }
+  behavior: url(../build-PIE/PIE.htc); }
 
 .btn-gray {
   margin: 0px 0 6px 0px;
   display: inline-block;
-  color: #227ca5; }
+  color: #227ca5;
+  /*@include bg-gradient-to-left(#e8e8e8,#fff,#f5f5f5,#f1f1f1,#e8e8e8); */
+  background: #e8e8e8;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e8e8e8), to(whitesmoke));
+  background: -webkit-linear-gradient(#e8e8e8, whitesmoke);
+  background: -moz-linear-gradient(#e8e8e8, whitesmoke);
+  background: -ms-linear-gradient(#e8e8e8, whitesmoke);
+  background: -o-linear-gradient(#e8e8e8, whitesmoke);
+  background: linear-gradient(#e8e8e8, whitesmoke);
+  -pie-background: linear-gradient(#e8e8e8, whitesmoke); }
 
 #slides {
   margin-bottom: 35px; }
@@ -189,7 +198,8 @@ strong {
   max-width: 970px !important; }
 
 .main-content img {
-  border: 5px solid #f3f3f3; }
+  border: 5px solid #f3f3f3;
+  display: inline-block; }
 
 .main-content .show-img {
   display: inline-block;
@@ -206,7 +216,7 @@ strong {
   width: 52px;
   height: 52px;
   display: inline-block;
-  background-image: url("../images/group-icon.png");
+  background-image: url(../images/group-icon.png);
   background-repeat: no-repeat; }
 
 .rss {
@@ -234,14 +244,15 @@ strong {
     line-height: 25px; }
   .public-content .btn-blue {
     margin-bottom: 20px;
-    background: #4f85bc;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#4f85bc), to(#2f6192));
-    background: -webkit-linear-gradient(#4f85bc, #2f6192);
-    background: -moz-linear-gradient(#4f85bc, #2f6192);
-    background: -ms-linear-gradient(#4f85bc, #2f6192);
-    background: -o-linear-gradient(#4f85bc, #2f6192);
-    background: linear-gradient(#4f85bc, #2f6192);
-    -pie-background: linear-gradient(#4f85bc, #2f6192); }
+    background: #487fb6;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#487fb6), to(#2f6192));
+    background: -webkit-linear-gradient(#487fb6, #2f6192);
+    background: -moz-linear-gradient(#487fb6, #2f6192);
+    background: -ms-linear-gradient(#487fb6, #2f6192);
+    background: -o-linear-gradient(#487fb6, #2f6192);
+    background: linear-gradient(#487fb6, #2f6192);
+    -pie-background: linear-gradient(#487fb6, #2f6192);
+    /* @include bg-gradient-to-left(#487fb6,#3d7ab8,#3973ae,#3d6b99,#2f6192);*/ }
   .public-content .group-links {
     margin: 10px 0 28px 0; }
   .public-content h5 {
@@ -288,6 +299,11 @@ strong {
   padding-bottom: 86px;
   padding-bottom: 100px\0;
   line-height: 18px; }
+
+@-moz-document url-prefix() {
+  .public-content .message {
+    height: 135px;
+    padding: 10px 0; } }
 
 footer {
   background: #333;
@@ -347,12 +363,12 @@ footer {
 .icon-next {
   top: 12px;
   right: 12px;
-  background: url("../images/next-icon.png") no-repeat; }
+  background: url(../images/next-icon.png) no-repeat; }
 
 .next-blue {
   top: 13px;
   right: 6px;
-  background: url("../images/next-blue.png") no-repeat; }
+  background: url(../images/next-blue.png) no-repeat; }
 
 .icon-next,
 .next-blue {
